--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,10 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# WebStorm
+/.idea
 
-# dependencies
+# Backend
+/backend/node_modules
+/backend/src/migrations/info.json
+
+# Frontend
 /node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/frontend/build
